blur nas imagens

--- a/html/home.html
+++ b/html/home.html
@@ -63,7 +63,7 @@
                     <div class="item" style="background-image: url('../assets/images/cortina\ banner.jpg');">
                         <div class="content">
                             <div class="name">CORTINA</div>
-                            <div class="des" style="color: black;">As cortinas deste ambiente são leves, com tecido
+                            <div class="des" style="color: rgb(255, 255, 255);">As cortinas deste ambiente são leves, com tecido
                                 translúcido que filtra a luz natural, criando uma atmosfera acolhedora e sofisticada,
                                 alinhando-se perfeitamente ao design elegante do espaço.</div>
                             <button onclick="location.href='#persiana'">Ver mais</button>
@@ -243,19 +243,19 @@
                 <div class="hover-images">
                     <div class="image-hover-container">
                         <img src="../assets/images/automação-cortina.webp" alt="Imagem 1" class="hover-image">
-                        <div class="hover-info" style="background-color: #f0f0f0;">
+                        <div class="hover-info" style="background-color: #f0f0f087;">
                             <div class="info-content">
                                 <h3>Automação</h3>
-                                <p style="color: #333;">Cortinas e persianas totalmente automatizadas.</p>
+                                <p style="color: black;">Cortinas e persianas totalmente automatizadas.</p>
                             </div>
                         </div>
                     </div>
                     <div class="image-hover-container">
                         <img src="../assets/images/automação-persiana.jpg" alt="Imagem 2" class="hover-image">
-                        <div class="hover-info" style="background-color: #f0f0f0;">
+                        <div class="hover-info" style="background-color: #f0f0f087;">
                             <div class="info-content">
                                 <h3>Motorizada</h3>
-                                <p style="color: #333;">Cortinas ou persianas motorizadas.</p>
+                                <p style="color: black;">Cortinas ou persianas motorizadas.</p>
                             </div>
                         </div>
                     </div>
