--- a/html/home.html
+++ b/html/home.html
@@ -46,6 +46,11 @@
             <div class="logo">
                 <img src="../assets/svg/logo preta@300x.png" alt="Logo">
             </div>
+            <div class="hamburger-menu">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <nav class="nav-menu">
                 <ul>
                     <li><a id="inicio" href="#top">Início</a></li>
@@ -314,23 +319,30 @@
             </div>
         </section>
         <section id="contato">
-            <div class="title">
-                <h2>Entre em contato</h2>
-                <p style="color: #333;">Escolha uma das opções abaixo para falar conosco diretamente pelo WhatsApp:</p>
-            </div>
-            <div class="contact-buttons">
-                <a id="solicitar-orcamento" href="https://wa.me/5582988858584?text=Olá%2C+gostaria+de+solicitar+um+orçamento+para+cortinas."
-                    class="btn" target="_blank">
-                    <i class="fas fa-file-invoice"></i> Solicitar Orçamento
-                </a>
-                <a id="agendar-visita" href="https://wa.me/5582988858584?text=Olá%2C+gostaria+de+agendar+uma+visita+técnica+para+minha+residência."
-                    class="btn" target="_blank">
-                    <i class="fas fa-calendar-alt"></i> Agendar Visita Técnica
-                </a>
-                <a id="consultar-modelos" href="https://wa.me/5582988858584?text=Olá%2C+gostaria+de+ver+os+modelos+disponíveis+de+cortinas."
-                    class="btn" target="_blank">
-                    <i class="fas fa-search"></i> Consultar Modelos
-                </a>
+            <div class="container">
+                <div class="title">
+                    <h2>Entre em contato</h2>
+                    <p style="color: #333;">Escolha uma das opções abaixo para falar conosco diretamente pelo WhatsApp:</p>
+                </div>
+                <div class="contact-content">
+                    <div class="contact-text">
+                        <p style="color: #333;">Escolha uma das opções abaixo para falar conosco diretamente pelo WhatsApp:</p>
+                    </div>
+                    <div class="contact-buttons">
+                        <a id="solicitar-orcamento" href="https://wa.me/5582988858584?text=Olá%2C+gostaria+de+solicitar+um+orçamento+para+cortinas."
+                            class="btn" target="_blank">
+                            <i class="fas fa-file-invoice"></i> Solicitar Orçamento
+                        </a>
+                        <a id="agendar-visita" href="https://wa.me/5582988858584?text=Olá%2C+gostaria+de+agendar+uma+visita+técnica+para+minha+residência."
+                            class="btn" target="_blank">
+                            <i class="fas fa-calendar-alt"></i> Agendar Visita Técnica
+                        </a>
+                        <a id="consultar-modelos" href="https://wa.me/5582988858584?text=Olá%2C+gostaria+de+ver+os+modelos+disponíveis+de+cortinas."
+                            class="btn" target="_blank">
+                            <i class="fas fa-search"></i> Consultar Modelos
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
 
